feat: display viewer stats and collections
